--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^6.21.0",
     "framer-motion": "^10.16.16",
     "react-hot-toast": "^2.4.1",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "@vercel/blob": "^0.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
