--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^0.15.1",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.21.0",
-    "framer-motion": "^10.16.16",
     "react-hot-toast": "^2.4.1",
-    "zustand": "^4.4.7",
-    "@vercel/blob": "^0.15.1"
+    "react-router-dom": "^6.21.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
