--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-# Vercel Blob Configuration
-VITE_BLOB_READ_WRITE_TOKEN=your_blob_token_here
-
-# Existing environment variables
+# Supabase Configuration
 VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
